[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-pipeline"
version = "0.1.0"
description = "Dagster+ Serverless Arc inference pipeline orchestration."
requires-python = ">=3.11,<3.14"
dependencies = [
  "dagster>=1.10.0",
  "dagster-cloud",
  "dagster-webserver>=1.10.0",
  "dagster-aws>=0.26.0",
  "boto3>=1.34.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "arc_pipeline"
code_location_target_module = "arc_pipeline.definitions"